updated intro with repo info

--- a/morph/index.html
+++ b/morph/index.html
@@ -1644,7 +1644,7 @@
               
                 
                 <h1 id="welcome">Welcome</h1>
-<p>This documentation explains the Sensel Morph hardware, features, software, and, most importantly, how to use it.</p>
+<p>This documentation explains the Sensel Morph hardware, features, software, and, most importantly, how to use it. These docs are maintained in its own <a href="https://github.com/sensel/morph-docs">github repo</a>. If you have a suggestion, correction, or improvement, you can clone this repo and <a href="https://github.com/sensel/morph-docs/pulls">make a pull request</a> or <a href="https://github.com/sensel/morph-docs/issues">log an issue</a>.</p>
 <h2 id="overview-what-is-morph">Overview - What is Morph?</h2>
 <p>The Sensel Morph is a reconfigurable control surface for artists, musicians, coders, and creative people of all stripes. It can work using Bluetooth 4.0LE or USB connections.</p>
 <h3 id="features">Features</h3>
