--- a/sensel/base.html
+++ b/sensel/base.html
@@ -46,6 +46,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family={{ font }}">
         <style>body,input{font-family:"{{ text }}","Helvetica Neue",Helvetica,Arial,sans-serif}code,kbd,pre{font-family:"{{ code }}","Courier New",Courier,monospace}</style>
       {% endif %}
+      <link rel="stylesheet" href="../senselcss/MyFontsWebfontsKit.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     {% endblock %}
     {% for path in extra_css %}
