--- a/overrides/main.html
+++ b/overrides/main.html
@@ -26,7 +26,7 @@
 {% endblock %}
 {% block announce %}
 <span class="announce">
-  <a href="https://www.youtube.com/senselinck">
+  <a href="https://www.youtube.com/senselinc">
     More great tutorial content is <strong>@senselinc</strong> on
     <span class="twemoji youtube">
       {% include ".icons/fontawesome/brands/youtube.svg" %}
