minor text edit

--- a/disassembly/index.html
+++ b/disassembly/index.html
@@ -463,10 +463,11 @@
                 
                 <h1 id="morph-disassembly-and-reassembly-guide">Morph Disassembly and Reassembly Guide</h1>
 <p>This guide explains how the Morph is put together.
-You may want to access the internals of the Morph if you need to remove or replace the battery.
+You may want to access the internals of the Morph if you need to remove the battery.
+The battery is rated at 3.7V, 420mAh.
 If you do disassemble the Morph, this will void your warranty.
-The Morph will function normally without a battery if connected to a USB host.
-Removing the top panel is fairly simple, but you will need a Torx T6, or "star", driver to remove the screws. Torx T6 are pretty common in computers, and can be found at most online shops that have tools.</p>
+The Morph will function normally without a battery if connected to a USB host.</p>
+<p>Removing the top panel is fairly simple, but you will need a Torx T6, or "star", driver to remove the screws. Torx T6 are pretty common in computers, and can be found at most online shops that have tools.</p>
 <p>Tools needed:
 * Torx T6 driver
 * Xacto or other sharp blade
